--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "~1.0",
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/pinyin": "~3.0"
+        "overtrue/pinyin": "~3.0",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
@@ -62,5 +64,11 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
